--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ body#login {
 
 /*首页*/
 body#index {
-	background: url(http://bizhi.zhuoku.com/2011/09/04/webshots/webshots025.jpg) no-repeat center center;
+	background: url(https://res.wx.qq.com/a/wx_fed/webwx/res/static/img/2zrdI1g.jpg) no-repeat center center;
 	background-size: cover;
 }
 #index .wrapper {
